# single_arm_v1

./: CMakeLists.txt  ReadMe.md  beta.txt  can_init.bash  cmd.bash  config.yaml
include/: Matrix.hpp  Slice.hpp  SquareMatrix.hpp  Vector.hpp  can_fd.h  can_normal.h  ccg_controller.h  ccg_fric_controller.h  config_loader.h  motor.h  motor_interface.h  polynomial_trajectory.h  robot_arm.h  robot_struct.h  torque_sensor.h
include/x86/: eu_canable.h  zcan.h
single_arm_control/: CMakeLists.txt  package.xml
single_arm_control/scripts/: grav_comp_controller.py  grav_comp_node.py  singleArm_data_read_excitation_134.5.txt  trajectory_player.py
single_arm_control/scripts/utils/: plot_traj.py
single_arm_control/src/: random_move.cpp
single_arm_description/: CMakeLists.txt  package.xml
single_arm_description/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  single_arm.ros2_control.xacro  single_arm.srdf  single_arm_demo.urdf.xacro  single_arm_with_gripper.srdf
single_arm_description/launch/: display_robot.launch.py  real_hw.launch.py
single_arm_description/meshes/collision/: Empty_Link1_simplified.STL  Empty_Link2_simplified.STL  Empty_Link3_simplified.STL  Empty_Link4_simplified.STL  Empty_Link5_simplified.STL  Empty_Link6_simplified.STL  base_link0_simplified.STL  gripper_simplified.STL  table_simplified.STL
single_arm_description/meshes/visual/: gripper.STL  table.STL
single_arm_description/urdf/: gripper.urdf.xacro  scene.urdf.xacro  single_arm.urdf  single_arm.urdf.xacro
single_arm_hardware_interface/: CMakeLists.txt  package.xml  single_arm_hardware_interface_plugin.xml
single_arm_hardware_interface/include/single_arm_hardware_interface/: motor_command.hpp  motor_driver_base.hpp  rmd_motor_driver.hpp  single_arm_hardware_interface.hpp  whj_motor_driver.hpp
single_arm_hardware_interface/src/: rmd_motor_driver.cpp  single_arm_hardware_interface.cpp  whj_motor_driver.cpp
src/: cur_control.cpp  enable.cpp  go_home.cpp  grav_comp.cpp  grav_comp_with_fric.cpp  grav_comp_with_tqs.cpp  pos_control.cpp  test_torque_sensor.cpp
src/hardware/: motor.cpp  robot_arm.cpp  torque_sensor.cpp
src/kinematic/: kinematics.cpp  robotics_math.cpp
src/plan/: ccg_controller.cpp  ccg_fric_controller.cpp  polynomial_trajectory.cpp
src/usb_to_can/: can_fd.c  can_normal.cpp
