<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>single_arm_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dxy2575185366@outlook.com">xyd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rclpy</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>pinocchio</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
